--- a/app/templates/media_detail_simple.html
+++ b/app/templates/media_detail_simple.html
@@ -497,7 +497,7 @@
                                     </div>
                                     
                                     <!-- Action button / Status -->
-                                    {{ media_status_badge(item, style='button', size='md') }}
+                                    {{ media_status_badge(item, style='button', size='md', base_url=base_url) }}
                                 </div>
                             </div>
                         </div>
@@ -505,7 +505,7 @@
                         <!-- Top badges (always visible) -->
                         <div class="absolute top-2 left-2">
                             {% if item.status or item.in_plex %}
-                            {{ media_status_badge(item, style='overlay', size='sm') }}
+                            {{ media_status_badge(item, style='overlay', size='sm', base_url=base_url) }}
                             {% endif %}
                         </div>
                         
@@ -583,7 +583,7 @@
                                     </div>
                                     
                                     <!-- Action button / Status -->
-                                    {{ media_status_badge(item, style='button', size='md') }}
+                                    {{ media_status_badge(item, style='button', size='md', base_url=base_url) }}
                                 </div>
                             </div>
                         </div>
@@ -591,7 +591,7 @@
                         <!-- Top badges (always visible) -->
                         <div class="absolute top-2 left-2">
                             {% if item.status or item.in_plex %}
-                            {{ media_status_badge(item, style='overlay', size='sm') }}
+                            {{ media_status_badge(item, style='overlay', size='sm', base_url=base_url) }}
                             {% endif %}
                         </div>
                         
